removed info warnings